--- a/index.html
+++ b/index.html
@@ -318,13 +318,19 @@
           <div class="prog-holder">
             <h4>JavaScript</h4>
             <div class="prog">
-              <span style="width: 80%" data-progress="40%"></span>
+              <span style="width: 80%" data-progress="90%"></span>
             </div>
           </div>
           <div class="prog-holder">
             <h4>Php</h4>
             <div class="prog">
-              <span style="width: 90%" data-progress="80%"></span>
+              <span style="width: 90%" data-progress="90%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h4>Python</h4>
+            <div class="prog">
+              <span style="width: 90%" data-progress="90%"></span>
             </div>
           </div>
         </div>
