--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
             We Are Kasper We Make Art.
           </h2>
           <p>
-            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt
-            nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
-            elit, eget tincidunt.
+            this para
           </p>
         </div>
       </div>
