--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
+    <body>
+
   <!-- Start Header -->
     <header>
       <div class="container">
@@ -240,3 +242,6 @@
       </div>
     </div>
     <!-- End About -->
+ </body>
+</html>
+
