--- a/about.html
+++ b/about.html
@@ -15,5 +15,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
   </head>
+  <body>
 
 </html>
